--- a/layouts/index.html
+++ b/layouts/index.html
@@ -53,6 +53,7 @@
       <div class="row">
         <div class="col-lg-10 mx-auto text-center">
           {{ with .Site.Data.homepage.about }}
+          <img src="{{ .logo | relURL }}">
           <p class="font-secondary lead text-dark">{{.content | markdownify}}</p>
           {{ if .button.enable }}
           {{ with .button }}
