--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,12 +17,13 @@ body {
   font-family: roboto, sans-serif;
   -webkit-font-smoothing: antialiased;
   font-size: 15px;
-  color: #4c4c4c
+  color: #1C1C1C;
 }
 
 p {
   font-weight: 400;
-  color: #4c4c4c;
+  color: #1C1C1C;
+  //color: #4c4c4c;
   font-size: 15px;
   line-height: 1.8;
   font-family: roboto, sans-serif
