--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,7 @@ h3,
 h4,
 h5,
 h6 {
-  color: #000;
+  color: #1C1C1C;
   font-family: playfair display, serif;
   line-height: 1.2
 }
@@ -269,7 +269,7 @@ a:hover {
 }
 
 .text-color {
-  color: #4c4c4c
+  color: #1C1C1C;
 }
 
 .text-dark {
