--- a/layouts/about/list.html
+++ b/layouts/about/list.html
@@ -5,7 +5,7 @@
   <div class="container">
     <div class="row">
       <div class="col-12">
-        <h1 class="text-white font-tertiary">{{ .Title }}</h1>
+        <h1 class="font-tertiary">{{ .Title }}</h1>
       </div>
     </div>
   </div>
