update link's color

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -205,6 +205,9 @@ select:focus {
   outline: 0
 }
 
+a.nav-link{
+  color: #BD004A!important;
+}
 a.text-dark:hover {
   color: var(--primary-color) !important
 }
