--- a/layouts/index.html
+++ b/layouts/index.html
@@ -221,16 +221,16 @@
     <div class="container">
       <div class="row">
         <div class="col-12 text-center">
-          <h2 class="section-title text-white mb-5">{{ .title | markdownify }}</h2>
+          <h2 class="section-title mb-5">{{ .title | markdownify }}</h2>
         </div>
         <div class="col-lg-10 mx-auto testimonial-slider">
           {{ range .item }}
           <!-- slider-item -->
           <div class="text-center testimonial-content">
-            <i class="ti-quote-right text-white icon mb-4 d-inline-block"></i>
-            <p class="text-white mb-4">{{.content | markdownify}}</p>
+            <i class="ti-quote-right icon mb-4 d-inline-block"></i>
+            <p class="mb-4">{{.content | markdownify}}</p>
             <img class="img-fluid rounded-circle mb-4 d-inline-block" src="{{.image | absURL }}" alt="client-image">
-            <h4 class="text-white">{{.name }}</h4>
+            <h4>{{.name }}</h4>
             <h6 class="text-light mb-4">{{ .designation }}</h6>
           </div>
           {{ end }}
