--- a/layouts/index.html
+++ b/layouts/index.html
@@ -277,5 +277,23 @@
   <!-- /blog -->
   {{ end }}
 
+{{ define "main" }}
+
+{{ partial "page-title.html" . }}
+
+<!-- blog -->
+<section class="section">
+  <div class="container">
+    <div class="row">
+      {{ range .Data.Pages }}
+      {{ .Render "post" }}
+      {{ end }}
+    </div>
+  </div>
+</section>
+<!-- /blog -->
+
+{{ end }}
+
 
 {{ end }}
