--- a/layouts/index.html
+++ b/layouts/index.html
@@ -54,6 +54,7 @@
         <div class="col-lg-10 mx-auto text-center">
           {{ with .Site.Data.homepage.about }}
           <img src="{{ .logo | relURL }}">
+          <h1>{{.title}}</h1>
           <p class="font-secondary lead text-dark">{{.content | markdownify}}</p>
           {{ if .button.enable }}
           {{ with .button }}
