fixed blog test

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -227,7 +227,8 @@ a:hover {
 
 .section-title {
   margin-bottom: 80px;
-  font-family: bwnistaint-xbd
+  font-family: bwnistaint-xbd;
+  color: #bd004a;
 }
 
 .bg-cover {
