--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -458,7 +458,7 @@ textarea.form-control {
 }
 
 .navbar .nav-item .nav-link {
-  font-family: bwnistaint-xbd;
+  font-family: CaviarDreams, sans-serif;
   text-transform: uppercase;
   padding: 15px
 }
