--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -353,7 +353,7 @@ a:hover {
 }
 
 .font-tertiary {
-  font-family: bwnistaint-xbd !important
+  font-family: CaviarDreams, sans-serif !important;
 }
 
 .shadow {
